Dockerfiles: allow passing params